# tongyi-deepresearch-openwebui-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  scholar_tool.py  search_tool.py  tongyi_deepresearch_pipe.py  visit_tool.py
.github/workflows/: ci.yml  release.yml
src/tongyi_deepresearch_openwebui_pipeline/: __init__.py
src/tongyi_deepresearch_openwebui_pipeline/pipes/: pipe.py  tongyi_deepresearch_pipe.py
src/tongyi_deepresearch_openwebui_pipeline/tools/: deepresearch_scholar_tool.py  deepresearch_search_tool.py  deepresearch_visit_tool.py  scholar_tool.py  search_tool.py  visit_tool.py
tests/: test_pipe_helpers.py  test_visit_tool.py
