[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tongyi-deepresearch-openwebui-pipeline"
version = "0.2.0"
description = "Agentic deep-research pipe and tools for Open WebUI, powered by Tongyi DeepResearch via OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "starship-s"}]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pyright",
]

[project.urls]
Homepage = "https://github.com/starship-s/tongyi-deepresearch-openwebui-pipeline"
Repository = "https://github.com/starship-s/tongyi-deepresearch-openwebui-pipeline"
"Bug Tracker" = "https://github.com/starship-s/tongyi-deepresearch-openwebui-pipeline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tongyi_deepresearch_openwebui_pipeline"]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".venv",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 88
output-format = "concise"

[tool.ruff.lint]
select = [
  # Core
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "C90",   # mccabe complexity
  "I",     # isort
  "D",     # pydocstyle
  "UP",    # pyupgrade
  "N",     # pep8-naming
  "YTT",   # flake8-2020
  # Security
  "S",     # flake8-bandit
  # Bug-catching
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "ARG",   # flake8-unused-arguments
  "DTZ",   # flake8-datetimez
  # Async
  "ASYNC", # flake8-async
  # Type-checking
  "TC",    # flake8-type-checking (formerly TCH)
  "FA",    # flake8-future-annotations
  # Logging
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  # Pylint
  "PLC",   # Pylint convention
  "PLE",   # Pylint error
  "PLR",   # Pylint refactor
  "PLW",   # Pylint warning
  # Performance & modernization
  "PERF",  # Perflint
  "FURB",  # refurb
  "FLY",   # flynt (f-string conversion)
  # Misc
  "PGH",   # pygrep-hooks
  "SLOT",  # flake8-slots
  "RUF",   # Ruff-specific rules
]
ignore = [
  "ISC001", # single-line-implicit-string-concatenation (conflicts with ruff formatter)
  "S311",   # suspicious-non-cryptographic-random-usage
  "D104",   # undocumented-public-package
]


[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
